--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   The joyous process of discovery as I do new projects.
   Old projects documented so I don't have to repeat the joyous process of discovery.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://ebd2.github.io" # the base hostname & protocol for your site
+url: "https://ebd2.github.io" # the base hostname & protocol for your site
 github_username:  ebd2
 
 # Build settings
