Previous/next, email address, link from about

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://ebd2.github.io" # the base hostname & protocol for your site
 github_username:  ebd2
+email: ebd2.github@gmail.com
 
 # Build settings
 markdown: kramdown
